@@ -1,9 +1,10 @@
 Back In Time
 
 Version 0.9.12
+* bug fix: now if you include ".abc" folder and exclude ".*", ".abc" will be saved in the snapshot
 * KDE4: add help
 * add Slovenian translation (Vanja Cvelbar <cvelbar@gmail.com>)
-* bug fix (GNOME): fix bookmarks with special characters
+* bug fix (GNOME): bookmarks with special characters
 
 Version 0.9.10
 * add Swedish translation (Niklas Grahn <terra.unknown@yahoo.com>)
